<resources>
    <string name="app_name">Tokolitik</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logo">Logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="register">Register</string>
    <string name="signupnow">Dont have an account? Sign up now!</string>
    <string name="loginnow">already have an account? login now!</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="seller">Seller</string>
    <string name="user">User</string>
    <string name="role">ROLE</string>
    <string name="usernamewarning">Kolom Username tidak boleh kosong</string>
    <string name="emailwarning">Kolom Email tidak boleh kosong</string>
    <string name="emailnotvalidwarning">Alamat Email tidak valid</string>
    <string name="passwordwarning">Kolom Password tidak boleh kosong</string>
    <string name="rolewarning">Kolom Role tidak boleh kosong</string>
    <string name="register_success">Register Success!</string>
    <string name="login_success">Login Success</string>
    <string name="register_failed">Register Failed</string>
    <string name="example">Halo, </string>
    <string name="title_dashboard">Dasbor</string>
    <string name="title_penjualan">Penjualan</string>
    <string name="title_produk">Produk</string>
    <string name="title_profile">Profile</string>
    <string name="image_description">Image</string>
    <string name="text_primary">Sample of title text</string>
    <string name="text_subtitle">Sample of subtitle text</string>
    <string name="something_wrong">Oops.. something went wrong</string>
    <string name="detail">Detail Produk</string>
    <string name="detail_harga">Harga Satuan</string>
    <string name="detail_tautan">Tautan Tokopedia</string>
    <string name="save">Simpan</string>
    <string name="detailBahanBaku"><u>Detail Bahan Baku</u></string>
    <string name="detailPenunjang"><u>Penunjang Keputusan</u></string>
    <string name="detailComposition">Detail Bahan</string>
    <string name="detailCompositionUnit">Satuan</string>
    <string name="profilepengguna">Profil Pengguna</string>
    <string name="nama_pengguna">  Nama Pengguna</string>
    <string name="input_name">Masukkan Nama Pengguna</string>
    <string name="nama_lengkap">  Nama Lengkap</string>
    <string name="input_nama_lengkap">Masukkan Nama Lengkap</string>
    <string name="nama_email">  Nama Email</string>
    <string name="input_email">Masukkan Email</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="profile_toko">Profil Toko</string>
    <string name="nama_toko">Nama Toko</string>
    <string name="input_toko_name">Masukkan Nama Toko</string>
    <string name="deskripsi_toko">Deskripsi Toko</string>
    <string name="input_deskripsi">Deskripsi Toko</string>
    <string name="unitwarning">Kolom Unit tidak boleh kosong</string>
    <string name="pricewarning">Kolom Harga tidak boleh kosong</string>
    <string name="newproduk">Produk Baru</string>
    <string name="newbahan">Bahan Baru</string>
    <string name="produk">Produk</string>
    <string name="bahan">Bahan</string>
    <string name="input_produk_name">Masukkan Nama Produk</string>
    <string name="input_bahan_name">Masukkan Nama Bahan</string>
    <string name="input_produk_harga">0</string>
    <string name="input_produk_tautan">Tautan Produk Tokopedia</string>
    <string name="ganti_sandi"><u>Ganti Sandi</u></string>
    <string name="ubah_sandi">Ubah Sandi</string>
    <string name="sandi_baru">Kata Sandi Baru</string>
    <string name="input_sandi">Masukkan Sandi Baru</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="analisa_ulasan">Analisa Ulasan</string>
    <string name="analisa_penjualan">Analisa Penjualan</string>
    <string name="delete_product">Delete Product</string>
    <string name="penjualan_text">Yuk catat terus transaksimu untuk menggunakan layanan analisa penjualan.</string>
    <string name="search">Tulis Kata Kunci pencarian...</string>
    <string name="profile_text">Kelola informasi toko dan pengguna</string>
    <string name="produk_text">Kelola produk dan bahan baku</string>
    <string name="dashobard_text">Page Description</string>
    <string name="detail_penjualan">Detail Penjualan</string>
    <string name="terjual">Terjual</string>
    <string name="detail_terjual">Terjual</string>
    <string name="detail_bahan">Detail Bahan</string>
    <string name="input_jumlah">Masukkan jumlah</string>
    <string name="newtransaction">Penjualan Baru</string>
    <string name="logOut"><u>LOG OUT</u></string>
    <string name="jumlah"><u>0</u></string>
    <string name="add_bahan">Tambah Bahan</string>
    <string name="detail_transaksi">Detail Transaksi</string>
    <string name="tautan_tokopedia">https://www.tokopedia.com/</string>
    <string name="produk_terjual">Produk Terjual</string>
    <string name="refresh">Refresh this page if this data is empty</string>

</resources>