<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">
    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.hfad.capstone.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/navigation_penjualan"
        android:name="com.hfad.capstone.ui.penjualan.PenjualanFragment"
        android:label="@string/title_penjualan"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_produk"
        android:name="com.hfad.capstone.ui.produk.ProdukFragment"
        android:label="@string/title_produk"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.hfad.capstone.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile"/>
</navigation>