<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddProduk">

    <androidx.cardview.widget.CardView
        android:id="@+id/detail_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="5dp"
        android:elevation="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:contentPaddingBottom="16dp"
        app:contentPaddingLeft="16dp"
        app:contentPaddingRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/view3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/addProduk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="4dp"
                android:text="@string/newproduk"
                android:textColor="@color/darkblue"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/detailproduk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:minHeight="32dp"
                android:paddingStart="4dp"
                android:text="@string/produk"
                android:textColor="@color/lightblue"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addProduk" />

            <EditText
                android:id="@+id/input_produk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="4dp"
                android:textColor="@color/blue"
                android:textSize="13sp"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@+id/detailproduk"
                android:importantForAutofill="no"
                android:autofillHints="@string/input_produk_name"
                android:hint="@string/input_produk_name"
                />

            <TextView
                android:id="@+id/detail_harga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:minHeight="32dp"
                android:paddingStart="4dp"
                android:text="@string/detail_harga"
                android:textColor="@color/lightblue"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_produk" />

            <EditText
                android:id="@+id/harga_produk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="4dp"
                android:textColor="@color/blue"
                android:textSize="13sp"
                android:maxLines="5"
                android:lines="5"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toBottomOf="@+id/detail_harga"
                android:autofillHints="@string/input_produk_harga"
                android:hint="@string/input_produk_harga"
                />
            <TextView
                android:id="@+id/detail_tautan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:minHeight="32dp"
                android:paddingStart="4dp"
                android:text="@string/detail_tautan"
                android:textColor="@color/lightblue"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/harga_produk" />

            <EditText
                android:id="@+id/tautan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="4dp"
                android:textColor="@color/blue"
                android:textSize="13sp"
                android:maxLines="5"
                android:lines="5"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toBottomOf="@+id/detail_tautan"
                android:autofillHints="@string/input_produk_tautan"
                android:hint="@string/input_produk_tautan"
                />
            <Button
                android:id="@+id/btnAddProduk"
                android:layout_width="276dp"
                android:layout_height="41dp"
                android:layout_gravity="center"
                android:layout_margin="40dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="64dp"
                android:background="@drawable/shape_bg_blue"
                android:backgroundTint="@color/lightblue"
                android:shadowColor="@color/blue"
                android:text="@string/save"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tautan" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>