<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.tabFragment.PenggunaTab">


    <androidx.cardview.widget.CardView
        android:id="@+id/detail_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="5dp"
        android:elevation="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:contentPaddingBottom="16dp"
        app:contentPaddingLeft="16dp"
        app:contentPaddingRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/view3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/profilepengguna"
                android:textColor="@color/darkblue"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/detailnama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center_vertical"
                android:minHeight="32dp"
                android:paddingStart="5dp"
                android:text="@string/nama_pengguna"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile" />

            <Button
                android:id="@+id/changePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/transparent"
                android:text="@string/ganti_sandi"
                android:textColor="@color/blue"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

            <EditText
                android:id="@+id/input_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/input_name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:lineSpacingExtra="4dp"
                android:textColor="@color/blue"
                android:textSize="13sp"
                app:layout_constraintTop_toBottomOf="@+id/detailnama" />


            <TextView
                android:id="@+id/detail_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:minHeight="32dp"
                android:paddingStart="5dp"
                android:text="@string/nama_email"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_nama" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:autofillHints="@string/email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:lineSpacingExtra="4dp"
                android:textColor="@color/blue"
                android:textSize="13sp"
                app:layout_constraintTop_toBottomOf="@+id/detail_email" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="276dp"
                android:layout_height="41dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="64dp"
                android:background="@drawable/shape_bg_blue"
                android:backgroundTint="@color/lightblue"
                android:shadowColor="@color/blue"
                android:text="@string/edit_profile"
                android:textColor="@color/white"
                app:backgroundTint="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>