<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.tabFragment.PenggunaTab">


    <androidx.cardview.widget.CardView
        android:id="@+id/detail_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="5dp"
        android:elevation="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:contentPaddingBottom="16dp"
        app:contentPaddingLeft="16dp"
        app:contentPaddingRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/view3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/sandi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/ubah_sandi"
                android:textColor="@color/darkblue"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/detailsandi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center_vertical"
                android:minHeight="32dp"
                android:paddingStart="5dp"
                android:text="@string/sandi_baru"
                android:textAllCaps="true"
                android:textColor="@color/lightblue"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sandi" />

            <EditText
                android:id="@+id/input_sandi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/input_sandi"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:lineSpacingExtra="4dp"
                android:textColor="@color/blue"
                android:textSize="13sp"
                app:layout_constraintTop_toBottomOf="@+id/detailsandi" />


            <Button
                android:id="@+id/btnChangePassword"
                android:layout_width="276dp"
                android:layout_height="41dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="64dp"
                android:background="@drawable/shape_bg_blue"
                android:backgroundTint="@color/lightblue"
                android:shadowColor="@color/blue"
                android:text="@string/save"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_sandi" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>