<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.Login">

    <ImageView
        android:layout_width="74dp"
        android:layout_height="22dp"
        android:src="@drawable/logoundagi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/logo" />

    <EditText
        android:id="@+id/editTextLogin"
        android:layout_width="350dp"
        android:layout_height="72dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_txt_username"
        android:hint="@string/username"
        android:paddingStart="60dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints=""
        android:inputType="text"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="350dp"
        android:layout_height="72dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_txt_password"
        android:hint="@string/password"
        android:paddingStart="60dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextLogin"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextLogin"
        app:layout_constraintTop_toBottomOf="@+id/editTextLogin"
        tools:ignore="RtlSymmetry"
        android:autofillHints="Password"
        android:inputType="textPassword" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:src="@drawable/loginbutton"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        android:contentDescription="@string/logo" />


</androidx.constraintlayout.widget.ConstraintLayout>