<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.Login">

    <View
        android:id="@+id/topBarView"
        android:layout_width="0dp"
        android:layout_height="125dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/waves"
        android:rotationY="-180"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBarView" />

    <ImageView
        android:layout_width="74dp"
        android:layout_height="22dp"
        android:src="@drawable/logoundagi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/logo" />

    <EditText
        android:id="@+id/editTextLogin"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="16dp"
        android:paddingStart="30dp"
        android:hint="@string/username"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints=""
        android:inputType="text"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="16dp"
        android:hint="@string/password"
        android:paddingStart="30dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextLogin"
        app:layout_constraintStart_toStartOf="@+id/editTextLogin"
        app:layout_constraintTop_toBottomOf="@+id/editTextLogin"
        tools:ignore="RtlSymmetry"
        android:autofillHints="Password"
        android:inputType="textPassword" />
    <Button
        android:id="@+id/btnLogin"
        android:shadowColor="@color/black"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_margin="40dp"
        android:background="@drawable/round_bg"
        android:text="@string/register"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        android:contentDescription="@string/logo"/>



    <Button
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>